# SAMCFD

./: .gitignore  README.md  package.json
apps/api-server/: .env.example  index.ts  package.json
apps/api-server/routes/v1/: index.ts
apps/api-server/src/: index.ts
apps/api-server/src/cache/: otpCache.ts
apps/api-server/src/controllers/balance/: balance.ts
apps/api-server/src/kafka/: kafkaFireAndForgetConsumer.ts  kafkaRequestResponse.ts
apps/api-server/src/middleware/: auth.ts
apps/db-processor/: package.json
apps/db-processor/src/: index.ts
apps/db-processor/src/handlers/: balanceQueryHandler.ts  balanceRequestHandler.ts  holdingsQueryHandler.ts  tradeCloseHandler.ts  tradeCreateHandler.ts  tradeOutcomeHandler.ts  userAuthenticationHandler.ts  userCreationHandler.ts  userExistenceHandler.ts
apps/db-processor/src/kafka/: kafkaConsumer.ts
apps/engine/: Cargo.toml
apps/engine/src/: liquidations.rs  main.rs  order_matching.rs  pnl.rs  processor.rs  state.rs  stop_loss_take_profit.rs  types.rs
apps/engine/src/kafka/: config.rs  consumer.rs  mod.rs  producer.rs
apps/engine/src/modules/: execution.rs  liquidations.rs  mod.rs  netting.rs  order_matching.rs  pnl.rs  price_updater.rs  processor.rs  state.rs  stop_loss_take_profit.rs  types.rs
apps/poller/: package.json  tsconfig.json
apps/poller/src/: config.ts  index.ts
docs/: architecture.md  logout-flow.md  me-flow.md  signin-flow.md  signup-flow.md  verify-otp-flow.md
plans/: balance_holdings_fix.md  payload_testing.md  plan_fixes  plan_order_matching.md  pnl_fixing.md
(+17 files in other folders)
